apps/immich/route.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: immich-route
  namespace: immich
spec:
  parentRefs:
  - name: eg-gateway
    namespace: envoy-gateway-system
    sectionName: https
  hostnames:
  - "immich.${domain_name}"
  rules:
  - backendRefs:
    - name: immich-server
      port: 2283
